[package]
name = "antbook"
version = "0.1.0"
authors = ["tiuuuuPJ <pj.kyosyou@outlook.jp>"]
autobins = true

[dependencies]

[[bin]]
name = "1-1"
path = "src/chapter-1/1.rs"

[[bin]]
name = "1-2"
path = "src/chapter-1/2.rs"

[[bin]]
name = "1-3"
path = "src/chapter-1/3.rs"

[[bin]]
name = "2-1"
path = "src/chapter-2/1.rs"

[[bin]]
name = "2-2"
path = "src/chapter-2/2.rs"
