[package]
name = "antbook"
version = "0.1.0"
authors = ["tiuuuuPJ <pj.kyosyou@outlook.jp>"]
autobins = false

[dependencies]

[[bin]]
name = "1-1"
path = "src/chapter-1/1.rs"

[[bin]]
name = "1-2"
path = "src/chapter-1/2.rs"

[[bin]]
name = "1-3"
path = "src/chapter-1/3.rs"

[[bin]]
name = "2-1"
path = "src/chapter-2/1.rs"

[[bin]]
name = "2-2"
path = "src/chapter-2/2.rs"

[[bin]]
name = "file_read_test"
path = "src/chapter-2/file_read_test.rs"

[[bin]]
name = "maze"
path = "src/chapter-2/maze.rs"

[[bin]]
name = "greedy"
path = "src/chapter-2/greedy.rs"
